# stocklyzer

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/cli/: __init__.py  __main__.py  main.py
src/cli/commands/: __init__.py  ticker.py
src/cli/display/: __init__.py  stock_renderer.py
src/cli/formatters/: __init__.py  financial_formatter.py  financial_table_formatter.py  stock_formatter.py
src/stocklyzer/: __init__.py  __main__.py  cli.py
src/stocklyzer/domain/: __init__.py  models.py
src/stocklyzer/services/: __init__.py  factory.py  interfaces.py  mock_service.py  stock_service.py
src/stocklyzer/services/valuations/: __init__.py  dcf.py
src/stocklyzer/utils/: __init__.py  calculations.py  exceptions.py  validators.py
tests/: __init__.py  test_dcf.py  test_domain_models.py  test_stocklyzer.py
tests/test_cli/: test_commands.py
