[project]
name = "stocklyzer"
version = "0.1.0"
description = "A simple command-line stock analysis tool"
readme = "README.md"
authors = [
  {name = "Pau Sian Khai", email = "pskhai@gmail.com"}
]
maintainers = [
  {name = "Pau Sian Khai", email = "pskhai@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]

bugs = "https://github.com/khaino/stocklyzer/issues"
changelog = "https://github.com/khaino/stocklyzer/blob/master/changelog.md"
homepage = "https://github.com/khaino/stocklyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
stocklyzer = "stocklyzer.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
