[project]
name = "stocklyzer"
version = "0.1.0"
description = "A command line interface for stock analysis"
readme = "README.md"
authors = [
  {name = "Pau Sian Khai", email = "pskhai@gmail.com"}
]
maintainers = [
  {name = "Pau Sian Khai", email = "pskhai@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {text = "Apache-2.0"}
dependencies = [
  # Core library dependencies (minimal)
]
requires-python = ">= 3.11"

[project.optional-dependencies]
cli = [
  "typer>=0.9.0",
  "rich>=10.11.0",
  "yfinance>=0.2.0"
]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]
# Install with: pip install stocklyzer[cli] for CLI functionality
# Or: pip install stocklyzer[test] for development

[project.urls]
bugs = "https://github.com/khaino/stocklyzer/issues"
changelog = "https://github.com/khaino/stocklyzer/blob/master/changelog.md"
homepage = "https://github.com/khaino/stocklyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
slz = "cli.main:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
